radarr/base/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "radarr"
spec:
  selector:
    app: "radarr"
  ports:
    - port: 7878
      name: "radarr-http"
      protocol: "TCP"
