radarr/base/ingress.yml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "radarr"
  labels:
    name: "radarr"
spec:
  rules:
    - host: "radarr.k3s.home"
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "radarr"
                port:
                  name: "radarr-http"
